--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"@typescript-eslint/eslint-plugin": "^6.0.0",
 		"@typescript-eslint/parser": "^6.0.0",
 		"@vitejs/plugin-react": "^4.0.3",
+		"autoprefixer": "^10.4.16",
 		"eslint": "^8.51.0",
 		"eslint-config-prettier": "^9.0.0",
 		"eslint-plugin-import": "^2.28.1",
@@ -35,7 +36,11 @@
 		"eslint-plugin-react-refresh": "^0.4.3",
 		"identity-obj-proxy": "^3.0.0",
 		"jest": "^29.7.0",
+		"postcss": "^8.4.31",
 		"prettier": "^3.0.3",
+		"sass": "^1.69.3",
+		"sass-loader": "^13.3.2",
+		"tailwindcss": "^3.3.3",
 		"ts-jest": "^29.1.1",
 		"ts-node": "^10.9.1",
 		"typescript": "^5.0.2",
