Brushing on section content & cta

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
 		"noUnusedParameters": true,
 		"noFallthroughCasesInSwitch": true
 	},
-	"include": ["src"],
+	"include": ["src", "src/**/*.ts",
+    "src/**/*.d.ts"],
 	"references": [{ "path": "./tsconfig.node.json" }]
 }
