--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	},
 	"dependencies": {
 		"jest-environment-jsdom": "^29.7.0",
+		"nanoid": "^5.0.2",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0"
 	},
